--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -15,6 +15,11 @@
     </properties>
 
     <dependencies>
+        <dependency>
+            <groupId>com.mysql</groupId>
+            <artifactId>mysql-connector-j</artifactId>
+            <version>8.2.0</version>
+        </dependency>
 
         <dependency>
             <groupId>org.hibernate.orm</groupId>
@@ -29,6 +34,7 @@
         </dependency>
 
     </dependencies>
+
 
     <build>
         <plugins>
